<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pc.praful.student.AddStudent">

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_circular_profile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>


            <TextView
                android:id="@+id/myImageViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/iv_circular_profile"
                android:layout_alignStart="@+id/iv_circular_profile"
                android:layout_alignTop="@+id/iv_circular_profile"
                android:layout_alignRight="@+id/iv_circular_profile"
                android:layout_alignEnd="@+id/iv_circular_profile"
                android:layout_alignBottom="@+id/iv_circular_profile"
                android:layout_margin="1dp"
                android:gravity="center"
                android:text="@string/click_to_add_image"
                android:textColor="#000000" />

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <!--Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:textSize="16sp" />

    </LinearLayout>

    <!--EmaiID-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_EmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

    </LinearLayout>


    <!--Mobile Number-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Mobile_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_mobile_number"
            android:inputType="phone"
            android:textSize="16sp" />

    </LinearLayout>


    <!--Address-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_address"
            android:inputType="textPostalAddress"
            android:textSize="16sp" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />


</LinearLayout>
