<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_single_student"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:padding="20dp"
        card_view:cardBackgroundColor="#FAFAFA"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_Profile"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:contentDescription="@string/image"
                android:padding="5dp"
                android:src="@drawable/temp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <!--Name-->
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/praful"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="14sp" />

                <!--Address-->
                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bangalore"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="14sp" />

                <!--Email-->
                <TextView
                    android:id="@+id/tvEmailId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prafulpc045_gmail_com"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="14sp" />

                <!--Mobile-->
                <TextView
                    android:id="@+id/tvMobileNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9916929606"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>